--- a/src/components/Mapa/ItemMapa/ItemMapa.module.css
+++ b/src/components/Mapa/ItemMapa/ItemMapa.module.css
@@ -2,26 +2,32 @@
 
 .itemMapa{
     display: grid;
-    grid-template-columns:1fr auto  ;
+    grid-template-columns:50px auto  ;
     grid-template-rows:auto auto  ;
-    column-gap: 2em;
-    row-gap: 1em;
+    column-gap: 1em;
+    row-gap: .3em;
+    padding: .5em;
 }
 
 .num{
     grid-row: 1/3;
     grid-column: 1/2;
-    border: 1px solid #9699AB;
+    border: 2px solid #9699AB;
     border-radius: 50%;
+    align-self: center;
+    justify-content: center;
+    padding: .5em 0em;
 }
 
 .etapa{
     color: #9699AB;
     grid-row: 1/2;
     grid-column: 2/3;
+    justify-self: start;
 }
 
 .info{
     grid-row: 2/3;
     grid-column: 2/3;
+    justify-self: start;
 }
