--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -43,7 +43,7 @@
 
 
 .App {
-  width: 70vw;
+  width:1000px;
   height: 80vh;
   background-color: #101723;
   box-shadow:  0px 188px 52px rgba(0, 0, 0, 0.01), 0px 120px 48px rgba(0, 0, 0, 0.04), 0px 68px 41px rgba(0, 0, 0, 0.15), 0px 30px 30px rgba(0, 0, 0, 0.26), 0px 8px 17px rgba(0, 0, 0, 0.29), inset 0px 6px 8px rgba(255, 255, 255, 0.1), inset 0px -4px 5px rgba(0, 0, 0, 0.22);
@@ -57,7 +57,7 @@
 }
 
 .location{
-  width: 35%;
+  width: 280px;
   height: 100%;
   background-color: #483EFF;
   border-radius: 24px;
